deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: marketdata
  labels:
    name: marketdata
    istio-injection: enabled
