deploy/spot-tickers-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-streamer-spot-tickers
  namespace: marketdata
  labels:
    app: event-streamer-spot-tickers
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-streamer-spot-tickers
  template:
    metadata:
      name: event-streamer-spot-tickers
      labels:
        app: event-streamer-spot-tickers
    spec:
      containers:
        - name: event-streamer-spot-tickers
          image: event_streamer
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: event-streamer-spot-tickers
  namespace: marketdata
spec:
  selector:
    app: event-streamer-spot-tickers
  ports:
    - name: grpc
      protocol: TCP
      port: 9000
      targetPort: 9000
