deploy/websocket-adaptor-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-adaptor
  namespace: marketdata
  labels:
    app: websocket-adaptor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: websocket-adaptor
  template:
    metadata:
      name: websocket-adaptor
      labels:
        app: websocket-adaptor
    spec:
      containers:
        - name: websocket-adaptor
          image: websocket_adaptor
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: websocket-adaptor
  namespace: marketdata
spec:
  type: ClusterIP
  selector:
    app: websocket-adaptor
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
